plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.nine.baseballdiary'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}
configurations.all {
	resolutionStrategy.eachDependency { details ->
		if (details.requested.group == 'org.hibernate.orm' && details.requested.name == 'hibernate-core') {
			details.useVersion '6.2.7.Final'
			details.because 'Force Hibernate 6.2.7.Final to avoid ANTLR version issues'
		}
	}
}
repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok:1.18.28' // ✅ 수정
	annotationProcessor 'org.projectlombok:lombok:1.18.28'// ✅ 추가
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.jsoup:jsoup:1.15.3'

	// jackson-databind 는 Spring Boot BOM에 의해 관리되므로 별도 버전 명시는 하지 않거나, 최신 버전으로 설정합니다.
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	// 만약 명시적으로 지정하려면 최신 버전을 사용 (예: 2.15.2)
	// implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'

	// `jakarta.persistence` 의존성 추가
	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
	implementation 'com.google.code.gson:gson:2.10.1'
	// Hibernate 6 버전 의존성 추가 (Hibernate 6는 jakarta.persistence 사용)
	implementation 'org.hibernate.orm:hibernate-core:6.2.7.Final'
	implementation 'org.seleniumhq.selenium:selenium-java:4.19.1'
	implementation 'io.github.bonigarcia:webdrivermanager:5.7.0'

	// JJWT (버전 0.11.5 예시)
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	implementation 'org.springframework.boot:spring-boot-starter-validation'
	compileOnly 'org.projectlombok:lombok:1.18.28'
	annotationProcessor 'org.projectlombok:lombok:1.18.28'

}




tasks.named('test') {
	useJUnitPlatform()
}
